--- a/Index.html
+++ b/Index.html
@@ -87,12 +87,8 @@
                     <!-- Icon giỏ hàng -->
                     <div class="nav-item ">
 
-                        <a href="#!giohang" class="nav-link text-white">
+                        <a href="#!giohang" ng-controller="mainController" class="nav-link text-white">
                             <i class="bi bi-cart3" style="font-size: 1.5rem;"></i>
-                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                
-                                <span class="visually-hidden">unread messages</span>
-                            </span>
                         </a>
                     </div>
                 </div>
